--- a/class06/class06.Rmd
+++ b/class06/class06.Rmd
@@ -2,7 +2,7 @@
 title: 'Class 6: R Functions'
 author: "Kiana Munoz"
 date: "1/23/2020"
-output: html_document
+output: github_document
 ---
 
 ```{r setup, include=FALSE}
