--- a/class07/class07.Rmd
+++ b/class07/class07.Rmd
@@ -2,7 +2,7 @@
 title: "class07"
 author: "Kiana Munoz"
 date: "1/28/2020"
-output: html_document
+output: github_document
 ---
 
 ```{r setup, include=FALSE}
