--- a/class09/class09.Rmd
+++ b/class09/class09.Rmd
@@ -2,7 +2,7 @@
 title: "class09"
 author: "Kiana Munoz"
 date: "2/4/2020"
-output: html_document
+output: github_document
 ---
 
 ```{r setup, include=FALSE}
