--- a/class10/class10.Rmd
+++ b/class10/class10.Rmd
@@ -2,7 +2,7 @@
 title: "class10"
 author: "Kiana Munoz"
 date: "2/6/2020"
-output: html_document
+output: github_document
 ---
 
 ```{r setup, include=FALSE}
