Adding more class 13 data

--- a/class13/class13.Rmd
+++ b/class13/class13.Rmd
@@ -43,6 +43,12 @@ write.pdb(lig, file = "1hsg_ligand.pdb")
 lig
 ```
 
+Read docking results
+
+```{r}
+res <- read.pdb("all.pdbqt", multi=TRUE)
+write.pdb(res, "results.pdb")
+```
 
 
 
